# game-gardens-of-karaxas

./: .gitignore  AGENTS.md  Cargo.toml  GAME.md  INSTALLER.md  README.md  RELEASE_NOTES_TEMPLATE.md  TASKS.md  TECHNICAL.md  build.gradle.kts  patch_notes.md  settings.gradle.kts
.github/: release-body-template.md
assets/: README.md  iso_asset_manifest.json
backend/: .env.example  Dockerfile  README.md  requirements.txt
client-app/: Cargo.toml
client-app/src/: bootstrap_shell.rs  main.rs
designer-client/: README.md  designer_tool.py  world_design.py
docs/: ART_DIRECTION_BOARD.md  ART_PIPELINE_CONTRACT.md  CHARACTER_FLOW_QA.md  COST_GUARDRAILS.md  DEPRECATION_AUDIT.md  GAME.md  INSTALLER.md  ISOMETRIC_VERTICAL_SLICE_GATES.md  LEVEL_SCHEMA_V3.md  LEVEL_SCHEMA_V3_MIGRATION.md  LORE.md  OPERATIONS.md  PLAYTEST_HARDENING_CHECKLIST.md  README.md  REDIS_ADOPTION_GATE.md  RELEASE_NOTES_TEMPLATE.md  SECURITY.md  STEAM_DUAL_DISTRIBUTION.md  TASKS.md  TECHNICAL.md  TOWER_ADMIN_CHECKLIST.md  patch_notes.md
game-client/: README.md  project.godot
launcher/: build.gradle.kts
launcher-app/: Cargo.toml
launcher-app/src/: main.rs
scripts/: build_game_installer.ps1  install_channel.ps1  install_designer_client.ps1  install_game_client.ps1  pack.ps1  render-release-body.ps1  run_local_poc_stack.sh  update-release-notes.ps1  windows_installer_acceptance_smoke.ps1
sim-core/: Cargo.toml
tooling-core/: Cargo.toml
tools/: build_runtime_delta.py  generate_config_docs.py  generate_player_placeholder_png.py  generate_sellsword_sprite_pack.py  generate_shadow_graph_concepts.py  generate_ui_concept_blackwhite.py  generate_ui_concept_crazy.py  generate_ui_concept_iterative_loop20.py  generate_ui_concept_nova10.py  generate_ui_concept_outsidebox_20.py  generate_ui_concept_radial5.py  generate_ui_concept_radial_reboot.py  generate_ui_concept_true_iterative.py  generate_ui_concept_variants.py  generate_ui_polish_concepts.py  generate_ui_polish_concepts_v2.py  package_client_app_release.py  package_designer_client_release.py  validate_asset_ingest.py
world-service/: Cargo.toml
world-service/src/: auth.rs  config.rs  main.rs  tick_runner.rs
world-service/tests/golden/: campaign_battle_replay_v1.json
(+239 files in other folders)
