[package]
name = "launcher-app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
eframe = { version = "0.31.1", default-features = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
