[package]
name = "world-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
hex = "0.4"
hmac = "0.12"
http = "1.3"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
sim-core = { path = "../sim-core" }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6", features = ["trace", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
